Update message config